--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@ PSU ID: mar6897
 
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-body-tertiary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Home Page</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,13 +33,21 @@ PSU ID: mar6897
         <li class="nav-item">
           <a class="nav-link" href="/login">Login</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-        </li>
       </ul>
     </div>
   </div>
 </nav>
+<div class="container my-5">
+        <div class="card" style="width: 100%;">
+            <div class="card-body">
+                <h5 class="card-title">Welcome to the site</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <button class="btn btn-primary"><a href="/login" style="color: white; text-decoration: none;">Login</a></button>
+                <button class="btn btn-primary"><a href="/register" style="color: white; text-decoration: none;">Register</a></button>
+            </div>
+        </div>
+    </div>
 
 </body>
 
