--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,10 +5,9 @@ PSU ID: mar6897
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head >
     <meta charset="utf-8">
-    <title>Home page</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Democratic-Decisions</title>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -18,7 +17,7 @@ PSU ID: mar6897
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Home Page</a>
+    <a class="navbar-brand" href="#">Democratic-Decisions</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -27,12 +26,15 @@ PSU ID: mar6897
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/register">Register</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/login">Login</a>
-        </li>
+
+        <%if (status == "loggedIn"){%>
+            <li class="nav-item"><a class="nav-link" href="/profile">Profile</a></li>
+            <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
+        <%} else {%>
+            <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
+            <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
+        <%}%>
+
       </ul>
     </div>
   </div>
@@ -40,11 +42,23 @@ PSU ID: mar6897
 <div class="container my-5">
         <div class="card" style="width: 100%;">
             <div class="card-body">
-                <h5 class="card-title">Welcome to the site</h5>
+
+                <%if (status == "loggedIn"){%>
+                    <h5 class="card-title">Welcome <%= user.email%></h5>
+                <%}else{%>
+                    <h5 class="card-title">Welcome to the Democratic-Decisions web application</h5>
+                <%}%>
+
                 <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <button class="btn btn-primary"><a href="/login" style="color: white; text-decoration: none;">Login</a></button>
-                <button class="btn btn-primary"><a href="/register" style="color: white; text-decoration: none;">Register</a></button>
+
+                 <%if (status == "loggenIn"){%>
+                    <button class="btn btn-primary"><a href="/profile" style="color: white; text-decoration: none;">Profile</a></button>
+                    <button class="btn btn-primary"><a href="/logout" style="color: white; text-decoration: none;">Logout</a></button>
+                 <%}else{%>
+                     <p class="card-text">To get started login in if you are a user; or register to use the application.</p>
+                 <%}%>
+              
             </div>
         </div>
     </div>
