--- a/views/analytics.ejs
+++ b/views/analytics.ejs
@@ -3,23 +3,34 @@
 <head>
     <meta charset="utf-8">
     <title>Poll Analytics</title>
+
     <link rel="stylesheet" href="/css/analytics_styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script>
+    
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/xlsx@0.16.8/dist/xlsx.full.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script>
+
     <script type="application/json" id="pollResults"><%- JSON.stringify(pollResults) %></script>
     <script type="application/json" id="timeSeriesData"><%- JSON.stringify(timeSeriesData) %></script>
     <script type="application/json" id="genderData"><%- JSON.stringify(genderData) %></script>
     <script type="application/json" id="raceData"><%- JSON.stringify(raceData) %></script>
+    <script type="application/json" id="ageGroupData"><%- JSON.stringify(ageGroupData) %></script>
+    <script type="application/json" id="raceCandidateVotesData"><%- JSON.stringify(raceCandidateVotesData) %></script>
+
     <script src="/js/poll_analytics.js"></script>
 </head>
 <body style="background-color:#161b22;">
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Democratic-Decisions</a>
+            <a class="navbar-brand" href="/">Democratic-Decisions</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -91,7 +102,23 @@
         </div>
     </div>
     <div class="container">
-        <div class="card" id="main" style="width: 100%;">
+        <div class="card" id="main" style="width: 100%; background-color: #21262d; color: #ecf2f8;">
+            <div class="card-body">
+                <h5 class="card-title">Poll bar chart for age groups: <%= poll.title %></h5>
+                <canvas id="ageGroupChart"></canvas>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="card" id="main" style="width: 100%; background-color: #21262d; color: #ecf2f8;">
+            <div class="card-body">
+                <h5 class="card-title">Poll bar chart for race: <%= poll.title %></h5>
+                <canvas id="raceCandidateChart"></canvas>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="card" id="main" style="width: 100%; display: none;">
             <div class="card-body">
                 <h5 class="card-title">Poll time series chart for: <%= poll.title %></h5>
                 <canvas id="timeSeriesChart"></canvas>
