Added some icons; footer. Retype password to verify.

--- a/public/css/index_styles.css
+++ b/public/css/index_styles.css
@@ -32,3 +32,24 @@ select {
     display: inline;
     color: #89929b;
 }
+
+.footer {
+    background-color: #0d1117;
+    color: #89929b;
+    padding-top: 16px;
+    position: fixed;
+    bottom: 0;
+    height: 56px;
+    width: 100%;
+    left: 0;
+    text-align: center;
+}
+
+#git-link {
+    text-decoration: none;
+    color: #89929b;
+}
+
+#git-link:hover {
+    color: #cea5fb;
+}
