--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
         }
     </style>
 </head>
-<body class="main">
+<body class="main" style="margin-bottom: 88px; min-height: 100%;">
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">Democratic-Decisions</a>
@@ -43,18 +43,18 @@
             <div class="card-body" style="color: #ecf2f8;">
                 <% if (status == "loggedIn") { %>
                     <% if (user.role == "admin") { %>
-                        <h5 class="card-title">Welcome <%= user.fname %> <%= user.lname %> (Admin)</h5>
+                        <h5 class="card-title">&#128075; Welcome <%= user.fname %> <%= user.lname %>! (Admin)</h5>
                         <h6 class="card-title">The mission of the Democratic-Decisions web application is to enable users to engage in democratic decision-making through voting. Its goal is to provide a platform where users can create polls, gain insights into poll results, and participate in voting on various topics.</h6>
                         <p class="card-text">Create a poll or view analytics on existing polls.</p>
                         <form onsubmit="return false;" id="create_poll">
-                            <button onclick="document.location='/poll?<%=user.email%>'" class="btn btn-primary">Create a poll</button>
+                            <button onclick="document.location='/poll?<%=user.email%>'" class="btn btn-primary">Create a poll &nbsp;<i class='fas fa-pencil-alt' style='font-size:16px'></i></button>
                         </form>
                      <% } else { %>
-                        <h5 class="card-title">Welcome <%= user.fname %> <%= user.lname %> (Voter)</h5>
+                        <h5 class="card-title">&#128075; Welcome <%= user.fname %> <%= user.lname %>! (Voter)</h5>
                         <h6 class="card-subtitle mb-2">The mission of the Democratic-Decisions web application is to enable users to engage in democratic decision-making through voting. Its goal is to provide a platform where users can create polls, gain insights into poll results, and participate in voting on various topics.</h6>
                      <% } %>
                 <% } else { %>
-                    <h5 class="card-title">Welcome to the Democratic-Decisions web application</h5>
+                    <h5 class="card-title"> &#128075; Welcome to Democratic-Decisions!</h5>
                     <br>
                     <h6 class="card-subtitle">The mission of the Democratic-Decisions web application is to enable users to engage in democratic decision-making through voting. Its goal is to provide a platform where users can create polls, gain insights into poll results, and participate in voting on various topics.</h6>
                     <br>
@@ -66,6 +66,14 @@
                     <a class="btn btn-primary" href="/register" style="color: white; text-decoration: none;">
                         Register &nbsp;<i class="fa fa-user-plus" style="font-size:16px"></i>
                      </a>
+
+
+                 <footer class="footer">
+                    <div class="container-footer">
+                        <span><i class="fa fa-copyright" style="font-size:16px"></i> Mohd Rokon | <a id="git-link" href="https://github.com/rokon07/SWENG894-Capstone-Project" target="_blank"><i class='fab fa-github' style='font-size:16px'></i> rokon07</a> | 2024</span>
+                    </div>
+                 </footer>
+
                 <% } %>
             </div>
         </div>
@@ -86,7 +94,7 @@
                                     <% } %>
                                 <% }) %>
                         </select>
-                        <button class="btn btn-danger" onclick="removePoll()">Delete Poll</button>
+                        <button class="btn btn-danger" onclick="removePoll()">Delete Poll &nbsp;<i class="fa fa-trash-o" style="font-size:16px"></i></button>
                         <br>
                         <div class="alert alert-danger" role="alert" id="error" style="display:none;">
                             <br>
@@ -130,11 +138,12 @@
                     </div>
                 <br>
                 <br>
-                <div class="d-flex justify-content-between" style="min-width: auto;">
+                <div class="d-flex justify-content-between">
                     <% if (polls.length > 0) { %>
-                    <div class="row row-cols-1 row-cols-md-3 g-4" id="pollsContainer">
+                    <div class="row row-cols-1 row-cols-md-3 g-3" id="pollsContainer">
                         <% polls.forEach(poll => { %>
                         <% if (user.role == "voter" || poll.admin_email == user.email) { %>
+
                         <div class="col poll-item" style="min-width: auto;">
                             <div class="card h-100" data-poll-id="<%= poll.id %>" style="background-color: #161b22; color: #ecf2f8; border: none;">
                                 <div class="card-body d-flex flex-column">
@@ -191,7 +200,7 @@
                                             </div>
                                         <% } %>
 
-                                        <a href="/analytics/<%= poll.id %>" class="btn btn-success">View Analytics &nbsp;<i class="fa fa-line-chart" style="font-size:16px;"></i></a>
+                                        <a href="/analytics/<%= poll.id %>" class="btn btn-success" style="bottom:0;">View Analytics &nbsp;<i class="fa fa-line-chart" style="font-size:16px;"></i></a>
                                     <% } else { %>
                                     <% const today = new Date(); %>
                                     <% const pollDate = new Date(poll.deadline); %>
@@ -237,10 +246,12 @@
             </div>
         </div>
         </div>
-        <% } %>
 
+        <% } %>
 
         <script src="js/search_sort.js"></script>
         <script src="js/verify_poll.js"></script>
+
 </body>
+
 </html>
