--- a/public/css/analytics_styles.css
+++ b/public/css/analytics_styles.css
@@ -1,6 +1,3 @@
-.main {
-    background-color: #161b22;
-}
 
 .navbar {
     background-color: #0d1117;
@@ -50,7 +47,38 @@ table.poll_data_table {
     }
 
 .container {
-    margin-top: 24px; 
+    margin-top: 24px;
     margin-bottom: 24px;
     display: flex;
+    align-items: center;
+}
+
+.card-body-header{
+    display: grid;
+}
+
+.card-pie {
+    display: flex;
+    width: 100%;
+}
+
+.card-pie .card-body{
+    margin: 40px;
+}
+
+
+
+
+@media only screen and (max-width: 500px) {
+    .card-pie {
+        display: grid;
+    }
+
+    .container{
+        margin-top: 5px;
+    }
+
+    .card-title{
+        font-size: 18px;
+    }
 }
