--- a/public/css/register_styles.css
+++ b/public/css/register_styles.css
@@ -5,3 +5,11 @@
 #emailHelp{
     color: #ecf2f8;
 }
+
+
+@media only screen and (max-width: 500px) {
+    .container {
+        margin-top: 12px !important;
+    }
+
+}
